--- a/src/Animal.css
+++ b/src/Animal.css
@@ -3,4 +3,27 @@
     box-shadow: 0.2em 0.2em 0.2em ;
     padding: 0.5em;
     border-radius: 0.5em;
+    animation: rotate 2s linear infinite;
+}
+.animal :nth-child(1){
+    animation: rotate 0.1s linear infinite;
+
+    font-size: 5em;
+    font-weight: bold;
+}
+.animal :nth-child(2){
+    font-size: 1.2em;
+    padding: 1em;
+
+}
+.animal :nth-child(3){
+    font-size: 1em;
+    padding: 1em;
+}
+.animal :nth-child(4){
+    background-color: red;
+    color: white;
+    padding: 2.2em;
+    border-radius: 10px;
+
 }
